--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS6240.patt' ></a-marker-camera>
     <a-entity scale="0.01 0.01 0.01">
         
+      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/spore_g_baked_with_texture/scene.gltf"></a-gltf-model>
+      <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS9240.patt' ></a-marker-camera>
+    <a-entity scale="0.01 0.01 0.01">
+        
+      <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/lsd_portrait_test_h/scene.gltf"></a-gltf-model>
+      <a-marker preset='custom' type='pattern'  url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt' ></a-marker-camera>
+    <a-entity scale="0.01 0.01 0.01">  
       <a-camera-static/>
     </a-scene>
 </body>
