--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         </a-gltf-model>
       </a-marker>
         
+      <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt'>
+        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/lsd_portrait_test_h/scene.gltf" scale="0.02 0.02 0.02">
+        </a-gltf-model>
+      </a-marker>
+        
       <a-entity camera></a-entity>
     </a-scene>
 </body>
