--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </a-gltf-model>
       </a-marker>
         
+      <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS9240.patt'>
+        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/summer_creature/scene.gltf" scale="0.05 0.05 0.05">
+        </a-gltf-model>
+      </a-marker>
+        
       <a-entity camera></a-entity>
     </a-scene>
 </body>
