--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         </a-gltf-model>
       </a-marker>
         
-      <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/Markers/MarkerS10240.patt'>
-        <a-gltf-model src="https://raw.githubusercontent.com/TumblinDwnAgain/TumblinDwnAgain.github.io/master/summer_2/scene.gltf" scale="0.02 0.02 0.02">
+      <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/khj107/COMPLETE-AR-CODE/master/Markers/MarkerS10240.patt'>
+        <a-gltf-model src="https://raw.githubusercontent.com/khj107/COMPLETE-AR-CODE/master/scene.gltf" scale="0.02 0.02 0.02">
         </a-gltf-model>
       </a-marker>
         
